--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-syntax: glob
-
+*.log
 node_modules/*
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
