--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ coverage
 # node-waf configuration
 .lock-wscript
 
+# sublime projects
+*.sublime-project
+*.sublime-workspace
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
